# Riscv-Sym

./: .gitignore  AboutPage.qml  CMakeLists.txt  HomeButton.qml  InstructionsPage.qml  Main.qml  MainPage.qml  README.md  WelcomePage.qml  main.qrc  todo
.github/workflows/: ci.yml
include/: AssemblyCompiler.h  Memory.h  Ram.h  Registers.h  RiscvCpu.h
include/instruction/: AssemblyCompiler.h  BTypeInstruction.h  ITypeInstruction.h  Instruction.h  JTypeInstruction.h  RTypeInstruction.h  STypeInstruction.h  UTypeInstruction.h
src/: AssemblyCompiler.cpp  Memory.cpp  Ram.cpp  Registers.cpp  RiscvCpu.cpp  cpuwrapper.cpp  cpuwrapper.h  main.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: AssemblyCompiler.cpp  CMakeLists.txt  CsrUnit.cpp  Memory.cpp  RiscvCpu.cpp
src/core/include/core/: AssemblyCompiler.h  CsrUnit.h  Memory.h  RiscvCpu.h
src/core/include/core/instruction/: BTypeInstruction.h  ITypeInstruction.h  Instruction.h  JTypeInstruction.h  RTypeInstruction.h  STypeInstruction.h  SystemInstruction.h  UTypeInstruction.h  ZicsrInstruction.h
src/core/instruction/: BTypeInstruction.cpp  ITypeInstruction.cpp  Instruction.cpp  JTypeInstruction.cpp  RTypeInstruction.cpp  STypeInstruction.cpp  SystemInstruction.cpp  UTypeInstruction.cpp  ZicsrInstruction.cpp
src/gui/: AboutPage.qml  CMakeLists.txt  InstructionCard.qml  InstructionsPage.qml  MainPage.qml  cpuwrapper.cpp  cpuwrapper.h  main.cpp  main.qrc
src/instruction/: AssemblyCompiler.cpp  BTypeInstruction.cpp  ITypeInstruction.cpp  Instruction.cpp  JTypeInstruction.cpp  RTypeInstruction.cpp  STypeInstruction.cpp  UTypeInstruction.cpp
tests/: AssemblyCompilerTests.cpp  BTypeInstructionsTests.cpp  CMakeLists.txt  ITypeInstructionsTests.cpp  InstructionTests.cpp  JTypeInstructionsTests.cpp  RTypeInstructionsTests.cpp  STypeInstructionsTests.cpp  SystemInstructionsTests.cpp  UTypeInstructionsTests.cpp
tests/include/: RiscvCpuTest.h
